syntax = "proto3";

package item_service.service.v1;

option go_package = "item-service/pkg/gen/go/api/service/v1;proto_item_service";

import "api/google/api/annotations.proto";
import "api/model/v1/item_model.proto";

service ItemService {
  rpc Create(CreateRequest) returns (model.v1.Item) {
    option (google.api.http) = {
      post: "/item/create"
      body: "payload"
    };
  }

  rpc Update(UpdateRequest) returns (model.v1.Item) {
    option (google.api.http) = {
      patch: "/item/update"
      body: "payload"
    };
  }

  rpc Remove(RemoveRequest) returns (RemoveResponse) {
    option (google.api.http) = {
      delete: "/item/remove"
    };
  }

  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/items/list"
      response_body: "items"
    };
  }
}

message CreateRequest {
  int64 campaignId = 1;

  message Payload {
    string name = 1;
  }
  Payload payload = 10;
}

message UpdateRequest {
  int64 id = 1;
  int64 campaignId = 2;

  message Payload {
    string name = 1;
    optional string description = 2;
  }
  Payload payload = 10;
}

message RemoveRequest {
  int64 id = 1;
  int64 campaignId = 2;
}

message RemoveResponse {
  int64 id = 1;
  int64 campaign_id = 2;
  bool removed = 3;
}

message ListRequest {
  // empty
}

message ListResponse {
  repeated model.v1.Item items = 1;
}

